@@ -39,6 +39,9 @@ double gsl_stats_variance (const double data[], const size_t stride, const size_
 double gsl_stats_sd (const double data[], const size_t stride, const size_t n);
 double gsl_stats_variance_with_fixed_mean (const double data[], const size_t stride, const size_t n, const double mean);
 double gsl_stats_sd_with_fixed_mean (const double data[], const size_t stride, const size_t n, const double mean);
+double gsl_stats_ss (const double data[], const size_t stride, const size_t n);
+double gsl_stats_ss_m (const double data[], const size_t stride, const size_t n, const double mean);
+
 double gsl_stats_absdev (const double data[], const size_t stride, const size_t n);
 double gsl_stats_skew (const double data[], const size_t stride, const size_t n);
 double gsl_stats_kurtosis (const double data[], const size_t stride, const size_t n);
@@ -63,6 +66,8 @@ double gsl_stats_wvariance (const double w[], const size_t wstride, const double
 double gsl_stats_wsd (const double w[], const size_t wstride, const double data[], const size_t stride, const size_t n);
 double gsl_stats_wvariance_with_fixed_mean (const double w[], const size_t wstride, const double data[], const size_t stride, const size_t n, const double mean);
 double gsl_stats_wsd_with_fixed_mean (const double w[], const size_t wstride, const double data[], const size_t stride, const size_t n, const double mean);
+double gsl_stats_wss (const double w[], const size_t wstride, const double data[], const size_t stride, const size_t n);
+double gsl_stats_wss_m (const double w[], const size_t wstride, const double data[], const size_t stride, const size_t n, const double wmean);
 double gsl_stats_wabsdev (const double w[], const size_t wstride, const double data[], const size_t stride, const size_t n);
 double gsl_stats_wskew (const double w[], const size_t wstride, const double data[], const size_t stride, const size_t n);
 double gsl_stats_wkurtosis (const double w[], const size_t wstride, const double data[], const size_t stride, const size_t n);
