@@ -39,6 +39,9 @@ double gsl_stats_float_variance (const float data[], const size_t stride, const 
 double gsl_stats_float_sd (const float data[], const size_t stride, const size_t n);
 double gsl_stats_float_variance_with_fixed_mean (const float data[], const size_t stride, const size_t n, const double mean);
 double gsl_stats_float_sd_with_fixed_mean (const float data[], const size_t stride, const size_t n, const double mean);
+double gsl_stats_float_ss (const float data[], const size_t stride, const size_t n);
+double gsl_stats_float_ss_m (const float data[], const size_t stride, const size_t n, const double mean);
+
 double gsl_stats_float_absdev (const float data[], const size_t stride, const size_t n);
 double gsl_stats_float_skew (const float data[], const size_t stride, const size_t n);
 double gsl_stats_float_kurtosis (const float data[], const size_t stride, const size_t n);
@@ -63,6 +66,8 @@ double gsl_stats_float_wvariance (const float w[], const size_t wstride, const f
 double gsl_stats_float_wsd (const float w[], const size_t wstride, const float data[], const size_t stride, const size_t n);
 double gsl_stats_float_wvariance_with_fixed_mean (const float w[], const size_t wstride, const float data[], const size_t stride, const size_t n, const double mean);
 double gsl_stats_float_wsd_with_fixed_mean (const float w[], const size_t wstride, const float data[], const size_t stride, const size_t n, const double mean);
+double gsl_stats_float_wss (const float w[], const size_t wstride, const float data[], const size_t stride, const size_t n);
+double gsl_stats_float_wss_m (const float w[], const size_t wstride, const float data[], const size_t stride, const size_t n, const double wmean);
 double gsl_stats_float_wabsdev (const float w[], const size_t wstride, const float data[], const size_t stride, const size_t n);
 double gsl_stats_float_wskew (const float w[], const size_t wstride, const float data[], const size_t stride, const size_t n);
 double gsl_stats_float_wkurtosis (const float w[], const size_t wstride, const float data[], const size_t stride, const size_t n);
