@@ -20,6 +20,9 @@
 static double 
 FUNCTION(compute,variance) (const BASE data[], const size_t stride, const size_t n, const double mean);
 
+static double 
+FUNCTION(compute,ss) (const BASE data[], const size_t stride, const size_t n, const double mean);
+
 static double
 FUNCTION(compute,variance) (const BASE data[], const size_t stride, const size_t n, const double mean)
 {
@@ -37,6 +40,25 @@ FUNCTION(compute,variance) (const BASE data[], const size_t stride, const size_t
     }
 
   return variance ;
+}
+
+static double
+FUNCTION(compute,ss) (const BASE data[], const size_t stride, const size_t n, const double mean)
+{
+  /* takes a dataset and finds the sum of squares about the mean */
+
+  long double ss = 0 ;
+
+  size_t i;
+
+  /* find the sum of the squares */
+  for (i = 0; i < n; i++)
+    {
+      const long double delta = (data[i * stride] - mean);
+      ss += delta * delta;
+    }
+
+  return ss ;
 }
 
 
@@ -87,4 +109,20 @@ FUNCTION(gsl_stats,sd) (const BASE data[], const size_t stride, const size_t n)
 {
   const double mean = FUNCTION(gsl_stats,mean) (data, stride, n);
   return FUNCTION(gsl_stats,sd_m) (data, stride, n, mean);
+}
+
+
+double 
+FUNCTION(gsl_stats,ss_m) (const BASE data[], const size_t stride, const size_t n, const double mean)
+{
+  const double ss = FUNCTION(compute,ss) (data, stride, n, mean);
+  
+  return ss;
+}
+
+double 
+FUNCTION(gsl_stats,ss) (const BASE data[], const size_t stride, const size_t n)
+{
+  const double mean = FUNCTION(gsl_stats,mean) (data, stride, n);
+  return FUNCTION(gsl_stats,ss_m)(data, stride, n, mean);
 }
